# cjm-media-plugin-silero-vad

./: .gitignore  README.md  environment.yml  index.html  index.html.md  meta.html  meta.html.md  plugin.html  plugin.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_media_plugin_silero_vad/: _modidx.py  meta.py  plugin.py
nbs/: index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb
tests_manual/: __init__.py  test_silero_vad.py  validate_silero_vad_e2e.py
