[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-capability-silero-vad"
dynamic = ["version"]
description = "A Silero-based Voice Activity Detection (VAD) capability for the cjm-substrate runtime that provides high-accuracy speech segmentation."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm-substrate>=0.0.51', 'cjm-capability-primitives>=0.0.10', 'silero-vad', 'onnxruntime', 'numpy', 'soundfile']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-capability-silero-vad"
Documentation = "https://cj-mills.github.io/cjm-capability-silero-vad"

[project.entry-points.nbdev]
cjm_capability_silero_vad = "cjm_capability_silero_vad._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_capability_silero_vad.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_capability_silero_vad*"]

[tool.nbdev]
